# charla_fastapi

./: README.md  app.js  compila.sh  index.html  intro_fast.md  page.html
demo/: database.py  init_db.py  models.py  pyproject.toml  schema.py  seriesfliz.py  seriesfliz_db.py  server.py  test.py
slides/: FastAPI.xcf
