[tool.poetry]
name = "charlafastapi"
version = "0.1.0"
description = "Charla sobre FastAPI"
authors = ["Daniel Molina <dmolina@decsai.ugr.es>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.63.0"
SQLAlchemy = "^1.3.23"
Hypercorn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
